# ScheMatiQ

./: .dockerignore  .gitignore  .railway-config.example  AmericanGateways2025-07-21DDC.txt  CLAUDE.md  DEPLOYMENT_PLAN.md  GFF2025-05-06SDNY.txt  Immigration_ground_truth.csv  LICENSE  ODoe2025-02-13DMA.txt  ODoe2025-07-03CA1.txt  README.md  data_quality_evaluation_orig_nes_27.json  demo.json  deploy-railway  different Presidents ScheMatiQ meeting results_2026-02-23_01-35-28.csv  evaluate_schematiq.py  evaluation_results.json  output.txt  privacy_policy.md  railway.json.bak  requirements.txt  test_gemini_auth.py
QBSD/: EmbeddingRetriever.py  (+10 more)
qbsd-lib/: MANIFEST.in  pyproject.toml
qbsd-lib/qbsd/: __init__.py
qbsd-lib/qbsd/core/: __init__.py  cost_estimator.py  llm_backends.py  llm_call_tracker.py  model_specs.py  pricing_config.json  prompts.py  qbsd.py  retrievers.py  schema.py  utils.py  value_extractor.py
qbsd-lib/qbsd/evaluation/: README.md  __init__.py  data_quality_evaluation.py  gt_comparator.py  metrics_utils.py  row_evaluator.py  schema_evaluator.py  test_evaluation.py
qbsd-lib/qbsd/evaluation/config/: __init__.py  evaluation_config.json  nes_evaluation_config.json
qbsd-lib/qbsd/scripts/: generate_tables.py  run.py
qbsd-lib/qbsd/value_extraction/: __init__.py  main.py
qbsd-lib/qbsd/value_extraction/config/: constants.py  prompts.py
qbsd-lib/tests/: test_full_quota_flow.py  test_llm_call_tracker.py
schematiq-lib/: MANIFEST.in  pyproject.toml
schematiq-lib/schematiq/: __init__.py
schematiq-lib/schematiq/core/: __init__.py  cost_estimator.py  document_preprocessor.py  llm_backends.py  llm_call_tracker.py  model_specs.py  pricing_config.json  prompts.py  retrievers.py  schema.py  schematiq.py  table_detector.py  utils.py  value_extractor.py
schematiq-lib/schematiq/evaluation/: README.md  __init__.py  data_quality_evaluation.py  few_shot_manager.py  metrics.py  metrics_utils.py  query_answering_evaluation.py  row_evaluator.py  run_eval.py  schema_evaluator.py  test_evaluation.py
schematiq-lib/schematiq/scripts/: create_data.py  generate_tables.py  run.py
schematiq-lib/schematiq/value_extraction/: __init__.py  main.py
schematiq-lib/tests/: test_controlled_generation.py  test_excerpt_grounder.py  test_extraction_evaluation.py  test_full_quota_flow.py  test_llm_call_tracker.py
(+677 files in other folders)
