[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbsd"
version = "0.1.0"
description = "Query-Based Schema Discovery (QBSD) - A modern approach to information extraction"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hadar Franco"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "transformers",
    "torch",
    "sentence-transformers",
    "datasets",
    "pandas",
    "requests",
    "openai",
    "together",
    "google-genai>=1.0.0",
    "tiktoken",
    "arxiv",
    "PyPDF2",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qbsd*"]

[tool.setuptools.package-data]
"qbsd.core" = ["*.json"]
